[project]
name = "acmetk"
description = "An ACME Broker for Automated Certificate Acquisition in University Environments"
authors = [
    {name = "Noah Wöhler", email = "noah.woehler@gmail.com"},
]
dependencies = [
    "PyYAML",
    "acme",
    "aiohttp",
    "aiohttp_jinja2",
    "alembic",
    "asyncpg",
    "click",
    "cryptography",
    "dnspython",
    "infoblox-client",
    "josepy",
    "psycopg2-binary",
    "sqlalchemy",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dynamic = ['version']

[project.urls]
Homepage = "https://acmetk.readthedocs.io"
Repository = "https://github.com/noahkw/acmetk"

[project.optional-dependencies]
infoblox = [
    "infoblox-client",
]
lexicon = [
    "dns-lexicon",
]
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pdm.dev-dependencies]
tests = [
    "acme-tiny",
    "certbot",
    "trustme",
    "coverage",
]

[tool.pdm]
plugins = [
    "pdm-autoexport"
]

[tool.setuptools]
packages = [
    "acmetk",
    "acmetk.client",
    "acmetk.models",
    "acmetk.plugins",
    "acmetk.server",
]

[tool.setuptools.dynamic]
version = {attr = "acmetk.version.__version__"}
