[project]
name = "acmetk"
description = "An ACME Broker for Automated Certificate Acquisition in University Environments"
authors = [
    {name = "Noah Wöhler", email = "noah.woehler@gmail.com"},
]
dependencies = [
    "PyYAML",
    "acme",
    "aiohttp",
    "aiohttp_jinja2",
    "alembic",
    "asyncpg",
    "click",
    "cryptography",
    "dnspython",
    "infoblox-client",
    "josepy",
    "psycopg2-binary",
    "sqlalchemy",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dynamic = ['version']

[project.urls]
Homepage = "https://acmetk.readthedocs.io"
Repository = "https://github.com/noahkw/acmetk"

[project.optional-dependencies]
infoblox = [
    "infoblox-client",
]
lexicon = [
    "dns-lexicon",
    "asyncache",
]
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pdm.dev-dependencies]
tests = [
    "acme-tiny",
    "certbot",
    "trustme",
    "coverage",
]

[tool.pdm]
plugins = [
    "pdm-autoexport"
]

[[tool.pdm.autoexport]]
filename = "requirements.txt"
groups = ["default","lexicon","infoblox"]

[tool.setuptools]
packages = [
    "acmetk",
    "acmetk.client",
    "acmetk.models",
    "acmetk.plugins",
    "acmetk.server",
]

[tool.setuptools.dynamic]
version = {attr = "acmetk.version.__version__"}

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "session"

log_cli = "yes"
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
